--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-popper": "^1.3.4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "reactstrap": "^8.0.1",
+    "sass-loader": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
