--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
+  "homepage": "https://Shiivani.github.io/grocery-cart",
   "name": "grocery-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "gh-pages": "^2.1.1",
-    "homepage": "https://Shiivani.github.io/grocery-cart",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -16,6 +16,8 @@
     "sass-loader": "^8.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
