--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shiivani.github.io/grocery-cart/tree/develop",
+  "homepage": "https://Shiivani.github.io/grocery-cart",
   "name": "grocery-cart",
   "version": "0.1.0",
   "private": true,
